// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateEvent Component renders correctly when loading 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 flex items-center justify-center z-50 bg-black bg-opacity-50"
  >
    <div
      class="bg-white p-6 rounded shadow-lg w-96"
    >
      <div
        class="flex justify-between items-center mb-4"
      >
        <div
          class="flex flex-row"
        >
          <div>
            <h2
              class="text-lg font-semibold"
            >
              Crear Evento
            </h2>
            <div
              class="text-xs"
            >
              Aquí podrás conocer el clima
            </div>
          </div>
        </div>
        <div
          class="loader ease-linear rounded-full border-4 border-t-4 border-gray-200 h-8 w-8"
        />
      </div>
      <div>
        <div
          class="mb-4"
        >
          <label
            class="block mb-1"
          >
            Título:
          </label>
          <input
            class="border border-gray-300 p-2 w-full rounded"
            data-testid="title"
            disabled=""
            required=""
            type="text"
            value="Evento de prueba"
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block mb-1"
          >
            Descripción:
          </label>
          <textarea
            class="border border-gray-300 p-2 w-full rounded"
            disabled=""
            required=""
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block mb-1"
          >
            Ciudad:
          </label>
          <input
            class="border border-gray-300 p-2 w-full rounded"
            disabled=""
            required=""
            value=""
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block mb-1"
          >
            Fecha de Inicio:
          </label>
          <input
            class="border border-gray-300 p-2 w-full rounded"
            disabled=""
            required=""
            type="datetime-local"
            value=""
          />
        </div>
        <div
          class="mb-4 flex items-center"
        >
          <input
            class="mr-2"
            disabled=""
            type="checkbox"
          />
          <label>
            Todo el día
          </label>
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block mb-1"
          >
            Fecha de Finalización:
          </label>
          <input
            class="border border-gray-300 p-2 w-full rounded"
            disabled=""
            min=""
            type="datetime-local"
            value=""
          />
        </div>
        <button
          class="bg-gray-500 text-white p-2 rounded w-full"
          disabled=""
        >
          ¡Crear ahora!
        </button>
      </div>
      <button
        class="mt-4 text-gray-500"
        disabled=""
      >
        Cancelar
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreateEvent Component renders correctly when not loading 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 flex items-center justify-center z-50 bg-black bg-opacity-50"
  >
    <div
      class="bg-white p-6 rounded shadow-lg w-96"
    >
      <div
        class="flex justify-between items-center mb-4"
      >
        <div
          class="flex flex-row"
        >
          <div>
            <h2
              class="text-lg font-semibold"
            >
              Crear Evento
            </h2>
            <div
              class="text-xs"
            >
              Aquí podrás conocer el clima
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="mb-4"
        >
          <label
            class="block mb-1"
          >
            Título:
          </label>
          <input
            class="border border-gray-300 p-2 w-full rounded"
            data-testid="title"
            required=""
            type="text"
            value="Evento de prueba"
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block mb-1"
          >
            Descripción:
          </label>
          <textarea
            class="border border-gray-300 p-2 w-full rounded"
            required=""
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block mb-1"
          >
            Ciudad:
          </label>
          <input
            class="border border-gray-300 p-2 w-full rounded"
            required=""
            value=""
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block mb-1"
          >
            Fecha de Inicio:
          </label>
          <input
            class="border border-gray-300 p-2 w-full rounded"
            required=""
            type="datetime-local"
            value=""
          />
        </div>
        <div
          class="mb-4 flex items-center"
        >
          <input
            class="mr-2"
            type="checkbox"
          />
          <label>
            Todo el día
          </label>
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block mb-1"
          >
            Fecha de Finalización:
          </label>
          <input
            class="border border-gray-300 p-2 w-full rounded"
            min=""
            type="datetime-local"
            value=""
          />
        </div>
        <button
          class="bg-gray-500 text-white p-2 rounded w-full"
          disabled=""
        >
          ¡Crear ahora!
        </button>
      </div>
      <button
        class="mt-4 text-gray-500"
      >
        Cancelar
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreateEvent Component renders error message when error occurs 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 flex items-center justify-center z-50 bg-black bg-opacity-50"
  >
    <div
      class="bg-white p-6 rounded shadow-lg w-96"
    >
      <div
        class="flex justify-between items-center mb-4"
      >
        <div
          class="flex flex-row"
        >
          <div>
            <h2
              class="text-lg font-semibold"
            >
              Crear Evento
            </h2>
            <div
              class="text-xs"
            >
              Aquí podrás conocer el clima
            </div>
          </div>
        </div>
      </div>
      <p
        class="text-red-500 mb-4"
      >
        Error de validación
      </p>
      <div>
        <div
          class="mb-4"
        >
          <label
            class="block mb-1"
          >
            Título:
          </label>
          <input
            class="border border-gray-300 p-2 w-full rounded"
            data-testid="title"
            required=""
            type="text"
            value="Evento de prueba"
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block mb-1"
          >
            Descripción:
          </label>
          <textarea
            class="border border-gray-300 p-2 w-full rounded"
            required=""
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block mb-1"
          >
            Ciudad:
          </label>
          <input
            class="border border-gray-300 p-2 w-full rounded"
            required=""
            value=""
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block mb-1"
          >
            Fecha de Inicio:
          </label>
          <input
            class="border border-gray-300 p-2 w-full rounded"
            required=""
            type="datetime-local"
            value=""
          />
        </div>
        <div
          class="mb-4 flex items-center"
        >
          <input
            class="mr-2"
            type="checkbox"
          />
          <label>
            Todo el día
          </label>
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block mb-1"
          >
            Fecha de Finalización:
          </label>
          <input
            class="border border-gray-300 p-2 w-full rounded"
            min=""
            type="datetime-local"
            value=""
          />
        </div>
        <button
          class="bg-gray-500 text-white p-2 rounded w-full"
          disabled=""
        >
          ¡Crear ahora!
        </button>
      </div>
      <button
        class="mt-4 text-gray-500"
      >
        Cancelar
      </button>
    </div>
  </div>
</DocumentFragment>
`;
